tests/fixtures/invalid/pow_float_none_int.py
# Cannot call pow() with Float, None, Int
x = pow(1.0, None, 1)
